Git_WGBH_QC/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Confidential_Task_Details__c</fullName>
        <inlineHelpText>Details entered in this field will only be visible to other Major Gifts Users and the System Administrator</inlineHelpText>
        <label>Confidential Task Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Category__c</fullName>
        <label>Contact Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Contact_Email__c</fullName>
        <inlineHelpText>Email of the contact responsible for the event or the generic email address of the location the responses are to go to.</inlineHelpText>
        <label>Event Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Contact_Phone__c</fullName>
        <inlineHelpText>Phone number of the person or group sponsoring the event.</inlineHelpText>
        <label>Event Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <externalId>true</externalId>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Techique__c</fullName>
        <label>Techique</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Information__c</fullName>
        <label>Ticket Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WGBH_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGBH Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL use only.</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>Staff</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_Interaction_id__c</fullName>
        <description>Short interaction id, to only store the most recent interaction event.</description>
        <externalId>true</externalId>
        <label>TA Interaction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Created_by_Me_Assigned_to_Others</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Delegated</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Created by Me, Assigned to Others</label>
        <sharedTo>
            <groups>WGBY</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Member_Services</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>mserv</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Member Services</label>
        <sharedTo>
            <groups>WGBH Audience &amp; Member Services</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.LAST_UPDATE_DATE_ONLY</columns>
        <columns>TASK.STATUS</columns>
        <columns>REMINDER_DATE_TIME</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filters>
        <label>My Team&apos;s Open Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>soat__A2_My_Upcoming_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>A2 - My Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>soat__A3_My_Emails_to_Saleforce</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>A3 - My Emails to Saleforce This Week</label>
    </listViews>
    <listViews>
        <fullName>soat__A4_My_Unresolved_Emails_to_Saleforce</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Unresolved</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>A4 - My Unresolved Emails to Saleforce</label>
    </listViews>
    <listViews>
        <fullName>soat__B1_My_Tasks_This_Week</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B1 - My Tasks This Week</label>
    </listViews>
    <listViews>
        <fullName>soat__B2_My_Events_This_Week</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>B2 - My Events This Week</label>
    </listViews>
</CustomObject>